Hopefuly final changes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <br> <br>
         <p> <a href="passions/">Click here to learn more about my passions.</a> </p>
         <br> <br>
-        <p><a href="resume/"Click here to access my resume.</a></a></p>
+        <p><a href="resume/">Click here to access my resume.</a></p>
     </body>
 </html>
