--- a/passions.html
+++ b/passions.html
@@ -6,6 +6,13 @@
     <title>My favourite things to do</title>
 </head>
 <body>
-    
+    <p> My favourite football team is Liverpool FC. 
+        <br>
+        <img src="https://www.arabianbusiness.com/cloud/2022/11/14/liverpool-fc.jpg">
+        <br>
+        My favourite author is <a href="http://www.mohsinhamid.com/">Mohsin Hamid.</a> 
+        <br>
+        My favourite class is CS50 at HBS!
+        <img src="https://i.pinimg.com/564x/2f/29/d1/2f29d115015b406b95f2924ca4884aee.jpg">
 </body>
 </html>
