Fixing .html in the file

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <h1>Hello and welcome to my homepage!</h1>
         <br> <br>
-        <p> <a href="passions/">Click here to learn more about my passions.</a> </p>
+        <p> <a href="passions.html">Click here to learn more about my passions.</a> </p>
         <br> <br>
-        <p><a href="resume/">Click here to access my resume.</a></p>
+        <p><a href="resume.html">Click here to access my resume.</a></p>
     </body>
 </html>
